# SwarmCombat

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/fw_plane/include/fwp_simulator/: fw_dynamics.hpp
install/fw_plane/lib/fw_plane/: fw_sim_node  fw_visualizer_node
install/fw_plane/share/fw_plane/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fw_plane/share/fw_plane/cmake/: fw_planeConfig-version.cmake  fw_planeConfig.cmake
install/fw_plane/share/fw_plane/environment/: ament_prefix_path.dsv  path.dsv
install/fw_plane/share/fw_plane/launch/: fw_plane_visualizer_single.launch  fw_sim_single.launch  single_fw_plane.rviz  single_fw_sim.launch.py  single_fw_sim_.launch.py  single_fw_visual.launch.py
install/fw_plane/share/fw_plane/model/: plane.urdf
install/fwp_planner/include/fw_plane_sim/: fw_plane_visualizer.hpp
install/fwp_planner/include/fw_plane_sim/fw_sim/: fw_driver_sim.hpp  fw_sim_node.hpp
install/fwp_planner/lib/fwp_planner/: fw_logic_node
install/fwp_planner/share/fwp_planner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fwp_planner/share/fwp_planner/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_fwp_planner__rosidl_generator_cExport-noconfig.cmake  export_fwp_planner__rosidl_generator_cExport.cmake  export_fwp_planner__rosidl_generator_pyExport-noconfig.cmake  fwp_plannerConfig-version.cmake  (+9 more)
install/gcs_planner/share/gcs_planner/: package.bash  package.zsh
install/scripts/share/scripts/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sim_clock/lib/sim_clock/: sim_clock_node
install/sim_clock/share/sim_clock/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sim_msgs/share/sim_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/autopilot/fwp_planner/: CMakeLists.txt  package.xml
src/autopilot/fwp_planner/config/: apf_params.yaml  guidance_params.yaml
src/autopilot/fwp_planner/include/fw_plane_sim/: fw_plane_visualizer.hpp
src/autopilot/fwp_planner/include/fw_plane_sim/fw_sim/: fw_driver_sim.hpp  fw_sim_node.hpp
src/autopilot/fwp_planner/include/fwp_planner/: types.hpp
src/autopilot/fwp_planner/include/fwp_planner/algorithms/: apf_algorithm.hpp  base_algorithm.hpp  guidance_algorithm.hpp
src/autopilot/fwp_planner/msg/: DynamicState.msg  FusedEnemy.msg  TeamBroadcast.msg  TeamMulticast.msg
src/autopilot/fwp_planner/plugins/: nodelet_plugins.xml
src/autopilot/fwp_planner/src/: fw_logic_node.cpp
src/autopilot/fwp_planner/src/algorithms/: apf_algorithm.cpp  guidance_algorithm.cpp
src/autopilot/fwp_planner/src/px4_lib/drivers/: drv_hrt.cpp
src/autopilot/fwp_planner/src/px4_lib/parameters/: param.h  px4_parameters.cpp
src/autopilot/fwp_planner/src/px4_lib/px4_platform_common/: defines.h
src/autopilot/fwp_planner/src/px4_lib/slew_rate/: SlewRate.hpp
src/autopilot/fwp_planner/src/px4_lib/uORB/: uORB_sim.cpp  uORB_sim.hpp
src/autopilot/fwp_planner/src/px4_lib/uORB/topics/: autotune_attitude_control_status.h  commander_state.h  cpuload.h  home_position.h  vehicle_angular_velocity.h  vehicle_attitude.h  vehicle_attitude_setpoint.h  vehicle_command.h  vehicle_command_ack.h  vehicle_control_mode.h  vehicle_global_position.h  vehicle_land_detected.h  vehicle_local_position.h  vehicle_local_position_setpoint.h  vehicle_odometry.h  vehicle_rates_setpoint.h  vehicle_status.h  vehicle_status_flags.h
src/autopilot/gcs_planner/: CMakeLists.txt
src/autopilot/gcs_planner/src/: gcs_logic_node.cpp
src/scripts/: package.xml  setup.py
src/scripts/launch/: multi_fw.launch.py  multi_fw_plane.rviz  multi_fw_sim.launch  swarm_combat_test.launch.py
src/simulator/fw_plane/: CMakeLists.txt
src/simulator/fw_plane/include/BHDynamic/: BHDynamic.h
src/simulator/fw_plane/include/BHDynamic/backup/x86-20241001-formation/: BHDynamic.h
src/simulator/fw_plane/include/fwp_simulator/: fw_dynamics.hpp  fw_dynamics_.hpp
src/simulator/fw_plane/include/px4_lib/drivers/: drv_hrt.h
src/simulator/fw_plane/include/px4_lib/geo/: geo.h
src/simulator/fw_plane/include/px4_lib/parameters/: px4_parameters.hpp
src/simulator/fw_plane/include/px4_lib/px4_platform_common/: param.h
src/simulator/fw_plane/include/px4_lib/uORB/topics/: actuator_armed.h  battery_status.h  manual_control_setpoint.h  offboard_control_mode.h  takeoff_status.h  vehicle_air_data.h  vehicle_constraints.h  vehicle_gps_position.h
src/simulator/fw_plane/launch/: fw_plane_visualizer_single.launch  fw_sim_single.launch  single_fw_plane.rviz  single_fw_sim.launch.py  single_fw_sim_.launch.py  single_fw_visual.launch.py
src/simulator/fw_plane/model/: plane.urdf
src/simulator/fw_plane/model/meshes/: body.stl  elevators.stl  iris_prop_ccw.stl  iris_prop_cw.stl  left_aileron.stl  left_flap.stl  right_aileron.stl  right_flap.stl  rudder.stl
src/simulator/fw_plane/src/: fw_dynamics.cpp  fw_dynamics_.cpp  fw_sim_node.cpp  fw_visualizer_node.cpp
src/simulator/fw_plane/src/BHDynamic/: BHDynamic.h
src/simulator/fw_plane/src/BHDynamic/backup/arm64-20241112-guidance/: BHDynamic.h
src/simulator/gc_station/: CMakeLists.txt  package.xml
src/simulator/gc_station/src/: gcs_visualizer_node.cpp
src/simulator/sim_msgs/: CMakeLists.txt
src/simulator/sim_msgs/msg/: DeathNotice.msg  ExplosionReport.msg  FwControl.msg  PerceivedState.msg
src/utils/sim_clock/: CMakeLists.txt  README.md
src/utils/sim_clock/launch/: start_sim_clock.launch.py
src/utils/sim_clock/src/: sim_clock_node.cpp
src/utils/sim_clock/srv/: SetRate.srv
(+301 files in other folders)
